[tool.poetry]
name = "shared-items"
version = "0.0.10"
description = "A module for utilizing commonly used functionality in Notion project"
authors = ["Mark Reckard <mark.reckard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
notion-client = "^2.0.0"
typing-extensions = "^4.5.0"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
